--- a/templates/post_detail_page.html
+++ b/templates/post_detail_page.html
@@ -9,9 +9,12 @@
       <div class="card-header">
         <div class="row">
           <div class="col-md-10">
-            <h6 class="card-subtitle text-danger"><i class="ni ni-planet small"></i> far, far away</h6>
+              {% if post.verse %}
+                  <h6 class="card-subtitle"><a class="text-danger" href="{% url 'verse-detail' pk=post.verse.pk %}"><i class="ni ni-planet small"></i> {{ post.verse.name }}</a></h6>
+              {% endif %}
             <h1 class="card-title">{{ post.title }}</h1>
           </div>
+          {% if post.user == user %}
           <div class="col-2 text-end">
             <div class="btn-group">
               <a href="{% url 'post-update' pk=post.pk %}" class="btn btn-icon btn-round btn-primary btn-xs" type="button">
@@ -22,6 +25,7 @@
               </a>
             </div>
           </div>
+          {% endif %}
         </div>
 
 
@@ -46,16 +50,11 @@
           <p class="text-xs"><em>{{ post.comments }}</em></p>
         </div>
         {% endif %}
-        {% for tag in post.tag_list %}
-          <span class="badge badge-sm badge-danger">#{{ tag|slugify }}</span>
-        {% endfor %}
-        <!-- <span class="badge bg-gradient-secondary">#{% lorem 1 w random %}</span>
-        <span class="badge bg-gradient-secondary">#{% lorem 2 w random %}</span>
-        <span class="badge bg-gradient-secondary">#{% lorem 1 w random %}</span>
-        <span class="badge bg-gradient-secondary">#{% lorem 1 w random %}</span>
-        <span class="badge bg-gradient-secondary">#{% lorem 3 w random %}</span>
-        <span class="badge bg-gradient-secondary">#{% lorem 1 w random %}</span>
-        <span class="badge bg-gradient-secondary">#{% lorem 1 w random %}</span> -->
+        {% if post.tags %}
+            {% for tag in post.tag_list %}
+              <span class="badge badge-sm badge-danger">#{{ tag|slugify }}</span>
+            {% endfor %}
+        {% endif %}
       </div>
     </div>
   </div>
