working threads with replies

--- a/templates/_navbar.html
+++ b/templates/_navbar.html
@@ -14,11 +14,11 @@
           </div>
           <div class="col-auto m-auto">
             <a class="text-white cursor-pointer" href="{% url 'post-list' %}">
-              <i class="fa fa-cog fixed-plugin-button-nav"></i> Posts
+              <i class="ni ni-single-copy-04 fixed-plugin-button-nav"></i> Posts
             </a>
           </div>
           <div class="col-auto m-auto">
-            <a class="text-white cursor-pointer">
+            <a class="text-white cursor-pointer" href="{% url 'thread-list' %}">
               <i class="ni ni-chat-round fixed-plugin-button-nav"></i> Threads
             </a>
           </div>
