--- a/templates/character_list_page.html
+++ b/templates/character_list_page.html
@@ -1,17 +1,17 @@
 {% extends '_page.html' %}
 {% block title %}characters{% endblock %}
 {% block main %}
-<div class="header text-center mb-4">
-    <h1 class="mt-5 text-white mb-0">Characters</h1>
-{#          <h5>#}
-              <a href="{% url 'character-create' %}" class=" font-weight-normal badge badge-secondary">
-                new
-              </a>
-{#          </h5>#}
+<div class="header px-md-4">
+    <h3 class="mt-5 text-white">Characters<span></span></h3>
+    {% if user.is_authenticated %}
+    <a href="{% url 'character-create' %}"><button class="btn btn-icon btn-3 btn-primary btn-xs" type="button">
+        <span class="btn-inner--icon"><i class="ni ni-fat-add align-middle small"></i></span>
+        <span class="btn-inner--text">NEW</span>
+    </button></a>
+    {% endif %}
+  </div>
 
-</div>
-    <hr class="mb-5">
-<div class="row row-cols-1 row-cols-md-2 row-cols-xl-3">
+<div class="row row-cols-1 row-cols-md-2 row-cols-xl-3 px-md-4">
     {% for character in character_list %}
         {% include 'character_list_card.html' %}
     {% endfor %}
