--- a/templates/post_detail_page.html
+++ b/templates/post_detail_page.html
@@ -5,7 +5,7 @@
 
 <div class="row">
     <div class="col-md-10 col-lg-8 col-xl-6">
-        <div class="card">
+        <div class="card rounded-0">
             <div class="card-header">
 {#                <div class="row">#}
 {#                    <div class="col-md-10">#}
@@ -42,6 +42,18 @@
                     </div>
                     {% endif %}
                 </div>
+            {% if post.user == user %}
+
+    <div class="btn-group">
+      <a href="{% url 'post-update' pk=post.pk %}" class="nav-link px-2 py-1 text-xs" data-bs-toggle="tooltip" data-bs-placement="top" title="Edit Post">
+        <span class="btn-inner--icon text-secondary"><i class="fa fa-pen small"></i></span>
+      </a>
+      <a href="{% url 'post-delete' pk=post.pk %}" class="nav-link px-0 py-1 text-xs" data-bs-toggle="tooltip" data-bs-placement="top" title="Delete Post">
+        <span class="btn-inner--icon text-secondary"><i class="fa fa-trash small"></i></span>
+      </a>
+    </div>
+
+  {% endif %}
             </div>
             <hr class="m-0">
             <div class="card-body pb-2">
